# opendcs-operator

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/actions/: docker-ops.yml
.github/actions/docker-ops/: action.yml
.github/workflows/: build-test.yml  release.yml  tagged-release.yml
examples/: OpenDcsDatabase.yaml  lrgs-cluster.yaml
lrgs-config-controller/: Cargo.toml  Dockerfile
lrgs-config-controller/examples/: drgs-example.yaml
lrgs-config-controller/src/: crdgen.rs  main.rs
lrgs-config-controller/src/api/: mod.rs
lrgs-config-controller/src/api/v1/: dds_recv.rs  mod.rs
lrgs-config-controller/src/lrgs/: config.rs  configmap.rs  lrgs.rs  mod.rs  password_file.rs  service.rs  statefulset.rs
lrgs-controller/: Cargo.toml  Dockerfile
lrgs-controller/examples/: dds-host.yaml  users.yaml
lrgs-controller/src/: crdgen.rs  main.rs
lrgs-controller/src/api/v1/: lrgs.rs
lrgs-controller/src/lrgs/: controller.rs  lrgs.sh  metrics.rs  mod.rs  telemetry.rs
src/: crdgen.rs  lib.rs  main.rs
src/api/: constants.rs  mod.rs
src/api/v1/: dds_recv.rs  drgs.rs  lrgs.rs  mod.rs
src/api/v1/tsdb/: app.rs  database.rs
src/apps/: app_deployment.rs  controller.rs  mod.rs
src/controllers/lrgs/: main.rs
src/controllers/schema/: main.rs
src/lrgs/: config.rs  configmap.rs  controller.rs  lrgs.sh  main.rs  mod.rs  password_file.rs  service.rs  state.rs  statefulset.rs
src/schema/: configmap.rs  controller.rs  job.rs  main.rs  mod.rs  schema.sh  tests.rs
src/telemetry/: metrics.rs  mod.rs  state.rs
tests/: tests.rs
tests/common/: database.rs  mod.rs  opendcs_database.rs
