[package]
name = "lrgs-config-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "lrgs"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "linker=ld.lld", "-C", "relocation-model=static", "-C", "strip=symbols"]

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.25"
schemars = { version = "0.8.21", features = ["chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
garde = { version = "0.22.0", default-features = false, features = ["derive"] }
simple-xml-builder = "1.1.0"
clap = { version = "4.0", features = ["derive", "string"] }
sha1 = "0.10"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }
#hickory-resolver = "0.24.4"
jsonptr = "0.7.1"
anyhow = "1.0.97"
lazy_static = "1.4.0"
passwords = "3.1.16"
actix-web = "4.10.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.30.0"
opentelemetry = { version = "0.29.1", features = ["trace"] }
opentelemetry-otlp = { version = "0.29.0", optional = true }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
env_logger = "0.11.8"
prometheus-client = "0.23.1"
