[package]
name = "opendcs-controllers"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "lrgs"
path = "src/controllers/lrgs/main.rs"

[[bin]]
doc = false
name = "schema"
path = "src/controllers/schema/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "linker=ld.lld", "-C", "relocation-model=static", "-C", "strip=symbols"]

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
kube = { version = "1.0.0", features = ["runtime", "derive","admission"] }
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.25"
schemars = { version = "0.8.22", features = ["chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
garde = { version = "0.22.0", default-features = false, features = ["derive"] }
simple-xml-builder = "1.1.0"
clap = { version = "4.5", features = ["derive", "string"] }
sha1 = "0.10"
sha2 = "0.10.9"
base16ct = { version = "0.2.0", features = ["alloc"] }
#hickory-resolver = "0.24.4"
jsonptr = "0.7.1"
anyhow = "1.0.98"
lazy_static = "1.4.0"
passwords = "3.1.16"
actix-web = "4.11.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.30.0", optional = true }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
env_logger = "0.11.8"
prometheus-client = "0.23.1"
testcontainers-modules = { version = "0.12.1", features = ["blocking","k3s"] }
rustls = "0.23.29"
rstest = "0.25.0"
async-std = { version = "1.13", features = ["attributes"] }
ctor = "0.4.2"
