[package]
name = "opendcs-controllers"
version = "0.1.0"
edition = "2024"

[[bin]]
doc = false
name = "lrgs"
path = "src/controllers/lrgs/main.rs"

[[bin]]
doc = false
name = "schema"
path = "src/controllers/schema/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "linker=ld.lld", "-C", "relocation-model=static", "-C", "strip=symbols"]

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive","admission"] }
k8s-openapi = { version = "0.26.1", features = ["v1_30"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.25"
schemars = { version = "1.1.0", features = ["chrono04"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
garde = { version = "0.22.1", default-features = false, features = ["derive"] }
simple-xml-builder = "1.1.0"
clap = { version = "4.6", features = ["derive", "string"] }
sha1 = "0.10"
sha2 = "0.11.0"
base16ct = { version = "1.0.0", features = ["alloc"] }
#hickory-resolver = "0.24.4"
jsonptr = "0.7.1"
anyhow = "1.0.102"
lazy_static = "1.4.0"
passwords = "3.1.16"
actix-web = "4.13.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.31.1", optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
env_logger = "0.11.8"
prometheus-client = "0.24.0"
testcontainers-modules = { version = "0.15.0", features = ["blocking","k3s"] }
rustls = { version = "0.23.37", features = ["ring"] }
rstest = "0.26.1"
async-std = { version = "1.13", features = ["attributes"] }
ctor = "0.6.3"
